--- a/Space Invaders/settings.cfg
+++ b/Space Invaders/settings.cfg
@@ -1,8 +1,12 @@
 [Space Invaders]
 sensitivity = 5
-maxfps = 3
-gamewidth = 600
-gameheight = 800
+maxfps = 60
+game_width = 600
+game_height = 800
+player_img_path = images/player/player.png
+enemy_img_path = images/enemies/enemy.png
+bullet_img_path = images/bullets/bullet.png
+icon_img_path = images/icon/icon.png
 
 
 [Space Invaders AI]
