--- a/Space Invaders/settings.cfg
+++ b/Space Invaders/settings.cfg
@@ -3,10 +3,10 @@ sensitivity = 5
 maxfps = 60
 game_width = 600
 game_height = 800
+debug = true
 player_img_path = images/player/player.png
 enemy_img_path = images/enemies/enemy.png
 bullet_img_path = images/bullets/bullet.png
 icon_img_path = images/icon/icon.png
 
-
-[Space Invaders AI]
+[AI]
