--- a/Space Invaders/settings.cfg
+++ b/Space Invaders/settings.cfg
@@ -25,6 +25,7 @@ p5 = images/enemies/mothership.png
 
 [Bullet Sprites]
 p1 = images/bullets/bullet.png
+p2 = images/bullets/bullet.png
 
 [Background]
 p1 = images/backgrounds/Space.png
