--- a/Space Invaders/settings.cfg
+++ b/Space Invaders/settings.cfg
@@ -23,6 +23,9 @@ p3 = images/enemies/enemy3.png
 p4 = images/enemies/enemy4.png
 p5 = images/enemies/mothership.png
 
+[Explosion Sprites]
+p1 = images/explosions/Explosion.png
+
 [Bullet Sprites]
 p1 = images/bullets/bullet.png
 p2 = images/bullets/bullet.png
