--- a/Space Invaders/settings.cfg
+++ b/Space Invaders/settings.cfg
@@ -27,8 +27,8 @@ p5 = images/enemies/mothership.png
 p1 = images/explosions/Explosion.png
 
 [Bullet Sprites]
-p1 = images/bullets/bullet.png
-p2 = images/bullets/bullet.png
+up = images/bullets/bullet.png
+down = images/bullets/bullet.png
 
 [Background]
 p1 = images/backgrounds/Space.png
