--- a/Space Invaders/settings.cfg
+++ b/Space Invaders/settings.cfg
@@ -28,7 +28,7 @@ p1 = images/explosions/Explosion.png
 
 [Bullet Sprites]
 up = images/bullets/bullet.png
-down = images/bullets/bullet.png
+down = images/bullets/enemy_bullet.png
 
 [Background]
 p1 = images/backgrounds/Space.png
