--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -11,6 +11,15 @@ game_height = 800
 debug = true
 icon_img_path = images/icon/icon.png
 
+[Sounds]
+click = sounds/click.wav
+explosion = sounds/Explosion_short.wav
+gameover = sounds/Gameover.wav
+shooting = sounds/Shooting.wav
+exit = sounds/exit.wav
+pause = sounds/pause.wav
+screenshot = sounds/screenshot.wav
+
 [Player Sprites]
 p1 = images/player/default.png
 p2 = images/player/Spaceship.png
