--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -3,7 +3,7 @@ sensitivity = 5
 maxfps = 60
 game_width = 600
 game_height = 800
-debug = true
+debug = false
 icon_img_path = images/icon/icon.png
 
 [Sounds]
