--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -14,6 +14,7 @@ shooting = sounds/Shooting.wav
 exit = sounds/exit.wav
 pause = sounds/pause.wav
 screenshot = sounds/screenshot.wav
+victory = sounds/victory.wav
 
 [Bullet Sprites]
 up = images/bullets/bullet.png
