Integrated AI with game
Change log:
1. Integrated AI with game
2. Updated victory screen
3. Added sound volume settings
4. Refactored the code

--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -5,6 +5,7 @@ game_width = 600
 game_height = 800
 debug = false
 icon_img_path = images/icon/icon.png
+db_path = data/test.db
 
 [Sounds]
 click = sounds/click.wav
@@ -21,3 +22,5 @@ up = images/bullets/bullet.png
 down = images/bullets/enemy_bullet.png
 
 [AI]
+model_path = model/sample.pth
+input_shape = (4, 84, 84)
