Bug fixes and optimizations
Change log:
1. Optimized code in the screens
2. Fixed bugs with gameoverscreen after new highscore

--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -3,7 +3,7 @@ sensitivity = 5
 maxfps = 60
 game_width = 600
 game_height = 800
-debug = false
+debug = true
 icon_img_path = images/icon/icon.png
 db_path = data/test.db
 
