Added sounds to powerups and skeleton code for possible future powerups
Change log:
1. Added sounds to powerups when obtained
2. Added skeleton code for other possible powerups

--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -22,6 +22,7 @@ exit = sounds/exit.wav
 pause = sounds/pause.wav
 screenshot = sounds/screenshot.wav
 victory = sounds/victory.wav
+powerup = sounds/powerup.wav
 
 [Bullet Sprites]
 #Path to the sprites of the bullet
