--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -8,8 +8,10 @@ game_height = 800
 #Debug mode
 debug = false
 
-#Path to icon and database
+#Path to icon
 icon_img_path = images/icon/icon.png
+
+#Path to database (DO NOT TOUCH)
 db_path = data/test.db
 
 [Sounds]
@@ -35,5 +37,6 @@ model_path = model/sample.pth
 
 #Input shape of the AI model
 #The pixel for pixel image will be fed to the ai scaled to the
-#shape of the input (Do not change first value
+#shape of the input 
+#First value is number of frames to be stacked
 input_shape = 4, 84, 84
