Fixed screenshot issues
Change log:
1. Fixed issues with screenshotting

--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -14,6 +14,9 @@ icon_img_path = images/icon/icon.png
 #Path to database (DO NOT TOUCH)
 db_path = data/test.db
 
+#Path to store screenshots
+screenshot_path = screenshots
+
 [Sounds]
 #Path of the different sounds
 click = sounds/click.wav
