--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -31,5 +31,5 @@ powerup = sounds/powerup.wav
 
 [Bullet Sprites]
 #Path to the sprites of the bullet
-up = images/bullets/bullet.png
+up = images/bullets/player_bullet.png
 down = images/bullets/enemy_bullet.png
