Changed the icon loaded for the game

--- a/Space_Invaders/settings.cfg
+++ b/Space_Invaders/settings.cfg
@@ -9,7 +9,7 @@ game_height = 800
 debug = false
 
 #Path to icon
-icon_img_path = images/icon/icon.png
+icon_img_path = icon/icon.ico
 
 #Path to database (DO NOT TOUCH)
 db_path = data/test.db
